Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18754

Explicily include openssl/rand.h for el10

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      The openssl package shipping with el10 does not implicitly include openssl/rand.h:
      openssl-devel-3.2.2-15.el10.alma.1.x86_64

      Avoid a build error:

      eps/mount_lustre-sk_utils.Tpo -c -o gss/mount_lustre-sk_utils.o `test -f 'gss/sk_utils.c' || echo './'`gss/sk_utils.c
      gss/sk_utils.c: In function ‘sk_gen_params’:
      gss/sk_utils.c:1079:13: error: implicit declaration of function ‘RAND_bytes’ [-Wimplicit-function-declaration]
       1079 |         if (RAND_bytes((unsigned char *)&random, sizeof(random)) != 1) {
            |  
      

      Attachments

        Activity

          People

            stancheff Shaun Tancheff
            stancheff Shaun Tancheff
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: