LU-18754 build: explicitly include openssl/rand.h

el10 build fails with:
   error: implicit declaration of function 'RAND_bytes'

Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: Ieb1b75fbf7029b712addf9222d412d3bfa91e59e
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/58231
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Timothy Day <timday@amazon.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Caleb Carlson <caleb.carlson@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>